--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
 
-    <title>HomeWork_2</title>
+    <title>Web Studio</title>
   </head>
   <body class="mainpage">
-    <!-- ----------------------------------------------Logo , navigation, contcts-------------------------------- -->
+    <!--* ----------------------------------------------HEADER LOGO NAVI ADDRESS-------------------------------- -->
     <header class="header">
+
       <div class="conteiner ">
         <nav class="header-navi">
+
           <a class="header-logo link" href="./index.html"
             >web<span class="header-logo-studio">Studio</span></a
           >
@@ -35,15 +37,20 @@
             <li class="header-link-item">
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
+
             <li class="header-link-item">
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
+
             <li class="header-link-item">
               <a class="header-link link" href="">Contacts</a>
             </li>
+
           </ul>
         </nav>
+
         <address class="header-address">
+          
           <ul class="header-address-list list">
             <li class="header-address-item">
               <a class="header-address link" href="mailto:info@devstudio.com"
@@ -58,6 +65,7 @@
           </ul>
         </address>
       </div>
+
     </header>
     <main>
       <!----------------------------------------- Section - Hero -->
