--- a/portfolio.html
+++ b/portfolio.html
@@ -9,14 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link hr!--*--ef="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <!--*----------------------------Connect normalizer and my stylesheet---------------------*-->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
   </head>
   <body class="mainpage">
     <!-- --------------------------------Logo , navigation, contcts ----------------------------->
     <header class="header">
-      <div class="conteiner">
       <nav class="header-navi">
         <a class="header-logo link" href="./index.html"
           >web<span class="header-logo-studio">Studio</span></a>
@@ -42,12 +41,10 @@
           </li>
         </ul>
       </address>
-    </div>
     </header>
     <!-- Main section -->
     <main>
       <section class="ourworks">
-        <div class="conteiner">
         <h1 class="title" hidden>Our Works</h1>
         <!-- ------------------------------BUTTON-------------------------------- -->
         <ul class="filter-list list">
@@ -143,12 +140,10 @@
             >
           </li>
         </ul>
-      </div>
       </section>
     </main>
     <!-- ---------------------------Footer - Logo and thesis ------------------------->
     <footer class="footer">
-      <div class="conteiner">
       <a class="footer-logo link" href="./index.html"
         >web<span class="footer-logo-studio">Studio</span></a
       >
@@ -156,7 +151,6 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-    </div>
     </footer>
   </body>
 </html>
