--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link hr!--*--ef="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <!--*----------------------------Connect normalizer and my stylesheet---------------------*-->
-    <link rel="stylesheet" href="./css/modern-normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css" integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
   </head>
   <body class="mainpage">
-    <!-- --------------------------------Logo , navigation, contcts ----------------------------->
+    <!--*--------------------------------  HEADER  ----------------------------->
     <header class="header">
+      <div class="container">
       <nav class="header-navi">
         <a class="header-logo link" href="./index.html"
           >web<span class="header-logo-studio">Studio</span></a>
@@ -41,12 +42,15 @@
           </li>
         </ul>
       </address>
+    </div>
     </header>
-    <!-- Main section -->
     <main>
+       <!--*------------------------------  BUTTON  -------------------------------- -->
       <section class="ourworks">
+      <div class="container">
+
         <h1 class="title" hidden>Our Works</h1>
-        <!-- ------------------------------BUTTON-------------------------------- -->
+       
         <ul class="filter-list list">
           <li class="filter-list-item link">
             <button class="filter-btn" type="button">
@@ -74,7 +78,7 @@
             </button>
           </li>
         </ul>
-        <!-- ------------------------------------------IMG-H3_TEXT------------------------------ -->
+        <!--*---------------------------------------- IMG-H3_TEXT ------------------------------ -->
         <ul class="works-list list">
           <li class="works-list-item">
             <a class="work-list-link link"
@@ -140,10 +144,13 @@
             >
           </li>
         </ul>
+      </div>
       </section>
     </main>
-    <!-- ---------------------------Footer - Logo and thesis ------------------------->
+    <!--*--------------------------- Footer ------------------------->
     <footer class="footer">
+      <div class="container">
+
       <a class="footer-logo link" href="./index.html"
         >web<span class="footer-logo-studio">Studio</span></a
       >
@@ -151,6 +158,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
