--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,40 @@
   <body class="mainpage">
     <!--*--------------------------------  HEADER  ----------------------------->
     <header class="header">
+      <div class="container header-contr">
+        <nav class="header-navi">
+          <a class="header-logo link" href="./index.html"
+            >web<span class="header-logo-studio">Studio</span></a
+          >
+          <ul class="header-bar list">
+            <li class="header-link-item">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-link-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-link-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-adrs">
+          <ul class="header-address-list list">
+            <li class="header-address-item">
+              <a class="header-address link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-address-item">
+              <a class="header-address link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    </header>
+    <!-- <header class="header">
       <div class="container">
         <nav class="header-navi">
           <a class="header-logo link" href="./index.html"
@@ -53,7 +87,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <!--*------------------------------  BUTTON  -------------------------------- -->
       <section class="ourworks">
