--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </header>
     <main>
-      <!--*---------------------------- Hero -->
+      <!--*---------------------------- Hero  sec 1-->
 
       <section class="hero">
         <div class="container hero-cntr">
@@ -68,7 +68,7 @@
           <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
-      <!--*------------------------------------- Our Features -->
+      <!--*------------------------------------- Our Features sec 2-->
 
       <section class="features">
         <div class="container features-cntr">
@@ -105,7 +105,7 @@
           </ul>
         </div>
       </section>
-      <!--*------------------------------------------------- Our Job -->
+      <!--*------------------------------------------------- Our Job  sec 3 -->
 
       <section class="ourjob">
         <div class="container ourjob-cntr">
@@ -132,9 +132,9 @@
           </ul>
         </div>
       </section>
-      <!--*----------------------------------------------- Our Team -->
+      <!--*----------------------------------------------- Our Team sec 4-->
       <section class="ourteam">
-        <div class="container">
+        <div class="container cntr-ourteam">
           <h2 class="ourteam-title">Our Team</h2>
           <ul class="oueteam-list list">
             <li class="oueteam-list-item">
@@ -144,8 +144,10 @@
                 alt="photo Mark"
                 width="264"
               />
+              <div class="namestatus"></div>
               <h3 class="oueteam-list-name">Mark Guerrero</h3>
               <p class="oueteam-list-jobtitle">Product Designer</p>
+            </div>
             </li>
             <li class="oueteam-list-item">
               <img
@@ -154,8 +156,10 @@
                 alt="photo Tom"
                 width="264"
               />
+              <div class="namestatus"></div>
               <h3 class="oueteam-list-name">Tom Ford</h3>
               <p class="oueteam-list-jobtitle">Frontend Developer</p>
+            </div>
             </li>
             <li class="oueteam-list-item">
               <img
@@ -164,8 +168,10 @@
                 alt="photo Camila"
                 width="264"
               />
+              <div class="namestatus">
               <h3 class="oueteam-list-name">Camila Garcia</h3>
               <p class="oueteam-list-jobtitle">Marketing</p>
+            </div>
             </li>
             <li class="oueteam-list-item">
               <img
@@ -174,8 +180,10 @@
                 alt="photo Daniel"
                 width="264"
               />
+              <div class="namestatus">
               <h3 class="oueteam-list-name">Daniel Wilson</h3>
               <p class="oueteam-list-jobtitle">UI Designer</p>
+            </div>
             </li>
           </ul>
         </div>
