--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 alt="photo Mark"
                 width="264"
               />
-              <div class="namestatus"></div>
+              <div class="namestatus">
               <h3 class="oueteam-list-name">Mark Guerrero</h3>
               <p class="oueteam-list-jobtitle">Product Designer</p>
             </div>
@@ -156,7 +156,7 @@
                 alt="photo Tom"
                 width="264"
               />
-              <div class="namestatus"></div>
+              <div class="namestatus">
               <h3 class="oueteam-list-name">Tom Ford</h3>
               <p class="oueteam-list-jobtitle">Frontend Developer</p>
             </div>
