--- a/index.html
+++ b/index.html
@@ -136,53 +136,53 @@
       <section class="ourteam">
         <div class="container cntr-ourteam">
           <h2 class="ourteam-title">Our Team</h2>
-          <ul class="oueteam-list list">
-            <li class="oueteam-list-item">
+          <ul class="ourteam-list list">
+            <li class="ourteam-list-item">
               <img
-                class="oueteam-list-pic"
+                class="ourteam-list-pic"
                 src="./images/Mark.jpg"
                 alt="photo Mark"
                 width="264"
               />
               <div class="namestatus">
-              <h3 class="oueteam-list-name">Mark Guerrero</h3>
-              <p class="oueteam-list-jobtitle">Product Designer</p>
+              <h3 class="ourteam-list-name">Mark Guerrero</h3>
+              <p class="ourteam-list-jobtitle">Product Designer</p>
             </div>
             </li>
-            <li class="oueteam-list-item">
+            <li class="ourteam-list-item">
               <img
-                class="oueteam list-pic"
+                class="ourteam-list-pic"
                 src="./images/Tom.jpg"
                 alt="photo Tom"
                 width="264"
               />
               <div class="namestatus">
-              <h3 class="oueteam-list-name">Tom Ford</h3>
-              <p class="oueteam-list-jobtitle">Frontend Developer</p>
+              <h3 class="ourteam-list-name">Tom Ford</h3>
+              <p class="ourteam-list-jobtitle">Frontend Developer</p>
             </div>
             </li>
-            <li class="oueteam-list-item">
+            <li class="ourteam-list-item">
               <img
-                class="oueteam-list-pic"
+                class="ourteam-list-pic"
                 src="./images/Camila.jpg"
                 alt="photo Camila"
                 width="264"
               />
               <div class="namestatus">
-              <h3 class="oueteam-list-name">Camila Garcia</h3>
-              <p class="oueteam-list-jobtitle">Marketing</p>
+              <h3 class="ourteam-list-name">Camila Garcia</h3>
+              <p class="ourteam-list-jobtitle">Marketing</p>
             </div>
             </li>
-            <li class="oueteam-list-item">
+            <li class="ourteam-list-item">
               <img
-                class="oueteam-list-pic"
+                class="ourteam-list-pic"
                 src="./images/Daniel.jpg"
                 alt="photo Daniel"
                 width="264"
               />
               <div class="namestatus">
-              <h3 class="oueteam-list-name">Daniel Wilson</h3>
-              <p class="oueteam-list-jobtitle">UI Designer</p>
+              <h3 class="ourteam-list-name">Daniel Wilson</h3>
+              <p class="ourteam-list-jobtitle">UI Designer</p>
             </div>
             </li>
           </ul>
@@ -191,7 +191,7 @@
     </main>
     <!--*---------------------------------------- Footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="container  cntr-footer">
         <a class="footer-logo link" href="./index.html"
           >web<span class="footer-logo-studio">Studio</span></a
         >
