styles portfolio butt0n and works

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body class="mainpage">
     <!--*---------------------------- HEADER -------------------------------- -->
     <header class="header">
-      <div class="container header-contr">
+      <div class="container">
         <nav class="header-navi">
           <a class="header-logo link" href="./index.html"
             >web<span class="header-logo-studio">Studio</span></a
@@ -63,7 +63,7 @@
       <!--*---------------------------- Hero  sec 1-->
 
       <section class="hero">
-        <div class="container hero-cntr">
+        <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
@@ -108,7 +108,7 @@
       <!--*------------------------------------------------- Our Job  sec 3 -->
 
       <section class="ourjob">
-        <div class="container ourjob-cntr">
+        <div class="container">
           <h2 class="ourjob-title">What are we doing</h2>
 
           <ul class="ourjob-list list">
@@ -134,7 +134,7 @@
       </section>
       <!--*----------------------------------------------- Our Team sec 4-->
       <section class="ourteam">
-        <div class="container cntr-ourteam">
+        <div class="container">
           <h2 class="ourteam-title">Our Team</h2>
           <ul class="ourteam-list list">
             <li class="ourteam-list-item">
