--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      hr!--*--ef="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <!--*----------------------------Connect normalizer and my stylesheet---------------------*-->
@@ -25,7 +25,7 @@
   <body class="mainpage">
     <!--*--------------------------------  HEADER ----------------------------->
     <header class="header">
-      <div class="container header-contr">
+      <div class="container">
         <nav class="header-navi">
           <a class="header-logo link" href="./index.html"
             >web<span class="header-logo-studio">Studio</span></a
@@ -58,38 +58,8 @@
         </address>
       </div>
     </header>
-    <!-- <header class="header">
-      <div class="container">
-        <nav class="header-navi">
-          <a class="header-logo link" href="./index.html"
-            >web<span class="header-logo-studio">Studio</span></a
-          >
-          <ul class="header-bar list">
-            <li><a class="header-link link" href="./index.html">Studio</a></li>
-            <li>
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li><a class="header-link link" href="">Contacts</a></li>
-          </ul>
-        </nav>
-        <address class="header-address">
-          <ul class="header-address-list list">
-            <li class="header-address-item">
-              <a class="header-address link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="header-address-item">
-              <a class="header-address link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-    </header> -->
     <main>
-      <!--*------------------------------  BUTTON  -------------------------------- -->
+      <!--*================BUTTON==================== -->
       <section class="ourworks">
         <div class="container">
           <h1 class="title" hidden>Our Works</h1>
@@ -121,27 +91,30 @@
               </button>
             </li>
           </ul>
-          <!--*---------------------------------------- IMG-H3_TEXT ------------------------------ -->
+          <!--*--------------------- IMG-H3_TEXT ------------------------------ -->
           <ul class="works-list list">
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-8.jpg" alt="colored rectangles" />
+                <div class="workdiscript">
                 <h2 class="works-list-title">Banking App Interface Concept</h2>
-                <p class="works-list-text">App</p></a
+                <p class="works-list-text">App</p></div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-7.jpg" alt="qr code on phone" />
+                <div class="workdiscript">
                 <h2 class="works-list-title">Cashless Payment</h2>
-                <p class="works-list-text">Marketing</p></a
+                <p class="works-list-text">Marketing</p></div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-6.jpg" alt="loptop with phone" />
+                <div class="workdiscript">
                 <h2 class="works-list-title">Meditation App</h2>
-                <p class="works-list-text">App</p></a
+                <p class="works-list-text">App</p></div></a
               >
             </li>
             <li class="works-list-item">
@@ -150,44 +123,50 @@
                   src="./images/img-5.jpg"
                   alt="drive with phon navigation"
                 />
+                <div class="workdiscript">
                 <h2 class="works-list-title">Taxi Service</h2>
-                <p class="works-list-text">Marketing</p></a
+                <p class="works-list-text">Marketing</p></div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-4.jpg" alt="nice screensaver" />
+                <div class="workdiscript">
                 <h2 class="works-list-title">Screen Illustrations</h2>
-                <p class="works-list-text">Design</p></a
+                <p class="works-list-text">Design</p></div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-3.jpg" alt="pretty girl use phone" />
+                <div class="workdiscript">
                 <h2 class="works-list-title">Online Courses</h2>
-                <p class="works-list-text">Marketing</p></a
+                <p class="works-list-text">Marketing</p></div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-2.jpg" alt="pictures of insta story" />
-                <h2 class="works-list-title">Instagram Stories Concept</h2>
-                <p class="works-list-text">Design</p></a
+                <div class="workdiscript">
+                <p class="works-list-text">Design</p></div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-1.jpg" alt="vegetables in bag" />
+                <div class="workdiscript">
                 <h2 class="works-list-title">Organic Food</h2>
-                <p class="works-list-text">Web Site</p></a
+                <p class="works-list-text">Web Site</p></div></a
               >
             </li>
             <li class="works-list-item">
-              <a class="work-list-link link"
+              < class="work-list-link link"
                 ><img src="./images/img.jpg" alt="cap of latte" />
+                <div class="workdiscript">
                 <h2 class="works-list-title">Fresh Coffee</h2>
-                <p class="works-list-text">Web Site</p></a
-              >
+                <p class="works-list-text">Web Site</p>
+              </div>
+            </a>
             </li>
           </ul>
         </div>
