--- a/portfolio.html
+++ b/portfolio.html
@@ -148,6 +148,7 @@
               <a class="work-list-link link"
                 ><img src="./images/img-2.jpg" alt="pictures of insta story" />
                 <div class="workdiscript">
+                  <h2 class="works-list-title">Instagram Stories Concept</h2>
                 <p class="works-list-text">Design</p></div></a
               >
             </li>
@@ -160,7 +161,7 @@
               >
             </li>
             <li class="works-list-item">
-              < class="work-list-link link"
+              <a class="work-list-link link"
                 ><img src="./images/img.jpg" alt="cap of latte" />
                 <div class="workdiscript">
                 <h2 class="works-list-title">Fresh Coffee</h2>
