--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!--*------------------------------------- Our Features sec 2-->
 
       <section class="features">
-        <div class="container features-cntr">
+        <div class="container">
           <h2 class="features-title" hidden>Features</h2>
           <ul class="features-list list">
             <li class="features-list-item">
@@ -145,9 +145,9 @@
                 width="264"
               />
               <div class="namestatus">
-              <h3 class="ourteam-list-name">Mark Guerrero</h3>
-              <p class="ourteam-list-jobtitle">Product Designer</p>
-            </div>
+                <h3 class="ourteam-list-name">Mark Guerrero</h3>
+                <p class="ourteam-list-jobtitle">Product Designer</p>
+              </div>
             </li>
             <li class="ourteam-list-item">
               <img
@@ -157,9 +157,9 @@
                 width="264"
               />
               <div class="namestatus">
-              <h3 class="ourteam-list-name">Tom Ford</h3>
-              <p class="ourteam-list-jobtitle">Frontend Developer</p>
-            </div>
+                <h3 class="ourteam-list-name">Tom Ford</h3>
+                <p class="ourteam-list-jobtitle">Frontend Developer</p>
+              </div>
             </li>
             <li class="ourteam-list-item">
               <img
@@ -169,9 +169,9 @@
                 width="264"
               />
               <div class="namestatus">
-              <h3 class="ourteam-list-name">Camila Garcia</h3>
-              <p class="ourteam-list-jobtitle">Marketing</p>
-            </div>
+                <h3 class="ourteam-list-name">Camila Garcia</h3>
+                <p class="ourteam-list-jobtitle">Marketing</p>
+              </div>
             </li>
             <li class="ourteam-list-item">
               <img
@@ -181,9 +181,9 @@
                 width="264"
               />
               <div class="namestatus">
-              <h3 class="ourteam-list-name">Daniel Wilson</h3>
-              <p class="ourteam-list-jobtitle">UI Designer</p>
-            </div>
+                <h3 class="ourteam-list-name">Daniel Wilson</h3>
+                <p class="ourteam-list-jobtitle">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -191,7 +191,7 @@
     </main>
     <!--*---------------------------------------- Footer -->
     <footer class="footer">
-      <div class="container  cntr-footer">
+      <div class="container">
         <a class="footer-logo link" href="./index.html"
           >web<span class="footer-logo-studio">Studio</span></a
         >
