--- a/portfolio.html
+++ b/portfolio.html
@@ -97,24 +97,29 @@
               <a class="work-list-link link"
                 ><img src="./images/img-8.jpg" alt="colored rectangles" />
                 <div class="workdiscript">
-                <h2 class="works-list-title">Banking App Interface Concept</h2>
-                <p class="works-list-text">App</p></div></a
+                  <h2 class="works-list-title">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="works-list-text">App</p>
+                </div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-7.jpg" alt="qr code on phone" />
                 <div class="workdiscript">
-                <h2 class="works-list-title">Cashless Payment</h2>
-                <p class="works-list-text">Marketing</p></div></a
+                  <h2 class="works-list-title">Cashless Payment</h2>
+                  <p class="works-list-text">Marketing</p>
+                </div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-6.jpg" alt="loptop with phone" />
                 <div class="workdiscript">
-                <h2 class="works-list-title">Meditation App</h2>
-                <p class="works-list-text">App</p></div></a
+                  <h2 class="works-list-title">Meditation App</h2>
+                  <p class="works-list-text">App</p>
+                </div></a
               >
             </li>
             <li class="works-list-item">
@@ -124,24 +129,27 @@
                   alt="drive with phon navigation"
                 />
                 <div class="workdiscript">
-                <h2 class="works-list-title">Taxi Service</h2>
-                <p class="works-list-text">Marketing</p></div></a
+                  <h2 class="works-list-title">Taxi Service</h2>
+                  <p class="works-list-text">Marketing</p>
+                </div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-4.jpg" alt="nice screensaver" />
                 <div class="workdiscript">
-                <h2 class="works-list-title">Screen Illustrations</h2>
-                <p class="works-list-text">Design</p></div></a
+                  <h2 class="works-list-title">Screen Illustrations</h2>
+                  <p class="works-list-text">Design</p>
+                </div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-3.jpg" alt="pretty girl use phone" />
                 <div class="workdiscript">
-                <h2 class="works-list-title">Online Courses</h2>
-                <p class="works-list-text">Marketing</p></div></a
+                  <h2 class="works-list-title">Online Courses</h2>
+                  <p class="works-list-text">Marketing</p>
+                </div></a
               >
             </li>
             <li class="works-list-item">
@@ -149,25 +157,27 @@
                 ><img src="./images/img-2.jpg" alt="pictures of insta story" />
                 <div class="workdiscript">
                   <h2 class="works-list-title">Instagram Stories Concept</h2>
-                <p class="works-list-text">Design</p></div></a
+                  <p class="works-list-text">Design</p>
+                </div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img-1.jpg" alt="vegetables in bag" />
                 <div class="workdiscript">
-                <h2 class="works-list-title">Organic Food</h2>
-                <p class="works-list-text">Web Site</p></div></a
+                  <h2 class="works-list-title">Organic Food</h2>
+                  <p class="works-list-text">Web Site</p>
+                </div></a
               >
             </li>
             <li class="works-list-item">
               <a class="work-list-link link"
                 ><img src="./images/img.jpg" alt="cap of latte" />
                 <div class="workdiscript">
-                <h2 class="works-list-title">Fresh Coffee</h2>
-                <p class="works-list-text">Web Site</p>
-              </div>
-            </a>
+                  <h2 class="works-list-title">Fresh Coffee</h2>
+                  <p class="works-list-text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
