--- a/portfolio.html
+++ b/portfolio.html
@@ -187,8 +187,8 @@
     <footer class="footer">
       <div class="container">
         <a class="footer-logo link" href="./index.html"
-          >web<span class="footer-logo-studio">Studio</span></a
-        >
+          >web<span class="footer-logo-studio">Studio</span>
+          </a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
