--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <section class="features">
         <div class="container">
-          <h2 class="features-title" hidden>Features</h2>
+          <h2 class="features-title visually-hidden">Features</h2>
           <ul class="features-list list">
             <li class="features-list-item">
               <h3 class="features-list-title">Strategy</h3>
@@ -192,9 +192,11 @@
     <!--*---------------------------------------- Footer -->
     <footer class="footer">
       <div class="container">
+
         <a class="footer-logo link" href="./index.html"
           >web<span class="footer-logo-studio">Studio</span></a
         >
+        
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
